tests/errors/semantic/test_semantic_02_decl_init_mismatch.f90
program test_semantic_02_decl_init_mismatch
  implicit none
  integer :: a = 3.14
end program test_semantic_02_decl_init_mismatch
